# palantir-workflows

./: .dockstore.yml  .gitignore  LICENSE  Makefile  README.md  flip_haplotype_vcf_dill.py  run_vcfdist_dill.wdl  test_options.json  watt_config.yml
.circleci/: config.yml
BGESexEstimation/: BGESexEstimation.py  BGESexEstimation_thresholds_and_labels_20250801.tsv  sex_ploidy_ratio.txt
BenchmarkPhasing/: BenchmarkPhasing.wdl  PhaseVCF.wdl  README.md
BenchmarkSVs/: BenchmarkSVs.wdl  CleanSVs.wdl  Dockerfile  QcSVs.wdl  README.md  Roadmap.md  WittyerTasks.wdl  tasks.wdl
BenchmarkVCFs/: BenchmarkAndCompareVCFs.wdl  BenchmarkVCFs.wdl  BenchmarkVCFsWithoutMatch.wdl  CollectMetrics.wdl  CombineSummaries.wdl  CompareBenchmarks.wdl  CompareSamplesWithoutTruth.wdl  CreateIGVSession.wdl  ExportToGoogleSheets.ipynb  FindSamplesAndBenchmark.wdl  FindSamplesAndBenchmark_input.json  FindSamplesAndSimpleBenchmark.wdl  README.md  SimpleBenchmark.wdl  (+8 more)
ImputationPipeline/CreateAggregationSets/: CreateAggregationSets.py  pyproject.toml
ImputationPipeline/CreateAggregationSets/tests/: CreateAggregationSetsTest.py
ImputationPipeline/CreateAggregationSets/tests/resources/: expected_sample_sets.json  expected_sample_sets_2.json  expected_sample_sets_3.json  expected_sample_sets_3_with_delivery.json  expected_sample_sets_4.json  expected_sample_sets_4_with_delivery.json  expected_sample_sets_rework_2.json  samples2.tsv  samples_multiple_controls.tsv
ImputationPipeline/Liftover/LiftoverSites/: pyproject.toml
ImputationPipeline/Liftover/LiftoverSites/LiftoverSites/: LiftoverSites.py  __init__.py
ImputationPipeline/ManualQCPRS/: ManualQCPRS.py  pyproject.toml
ImputationPipeline/ManualQCPRS/tests/: ManualQCPRSTests.py
ImputationPipeline/ManualQCPRS/tests/resources/: single_sample_failed_all_conditions.tsv  single_sample_failed_all_conditions_a_new_reason.tsv  test_results.tsv  test_results_2.tsv  test_results_3.tsv
(+580 files in other folders)
