[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "ImputationPipeline/CreateAggregationSets/_version.py"
root = "../../"
git_describe_command = ['git', 'describe', '--dirty', '--tags', '--long', '--match', 'v[0-9]*']

[project]
name = "CreateAggregationSets"
dynamic = ["version"]
dependencies = ['firecloud >= 0.16.33', 'pytz >= 2022.2.1']
requires-python = ">=3.7"